--- a/Web/build.gradle
+++ b/Web/build.gradle
@@ -26,6 +26,7 @@ dependencies {
 	runtimeOnly 'com.h2database:h2'
 	runtimeOnly 'mysql:mysql-connector-java'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation group: 'org.webjars.bower', name: 'jquery', version: '3.3.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
