--- a/ChattingApp/app/build.gradle
+++ b/ChattingApp/app/build.gradle
@@ -8,6 +8,7 @@ android {
     compileSdk 30
 
     defaultConfig {
+
         applicationId "com.example.chattingapp"
         minSdk 21
         targetSdk 30
@@ -56,4 +57,6 @@ dependencies {
     implementation("androidx.cardview:cardview:1.0.0")
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 }
