--- a/Web/build.gradle
+++ b/Web/build.gradle
@@ -29,6 +29,9 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	implementation group: 'org.webjars.bower', name: 'jquery', version: '3.3.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	//Firebase
+	implementation 'com.google.firebase:firebase-admin:6.8.1'
 }
 
 test {
