--- a/Web/build.gradle
+++ b/Web/build.gradle
@@ -30,8 +30,11 @@ dependencies {
 	implementation group: 'org.webjars.bower', name: 'jquery', version: '3.3.1'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	//Firebase
+
+	//Firebase sdk
 	implementation 'com.google.firebase:firebase-admin:6.8.1'
+	implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '4.9.1'
+
 }
 
 test {
