--- a/ChattingApp/app/build.gradle
+++ b/ChattingApp/app/build.gradle
@@ -59,7 +59,8 @@ dependencies {
     implementation("androidx.cardview:cardview:1.0.0")
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     kapt 'com.github.bumptech.glide:compiler:4.11.0'
-
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     // retrofit
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
@@ -95,5 +96,4 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:2.2.2"
 
     implementation("io.reactivex.rxjava2:rxjava:2.2.8")
-
 }
