--- a/Web/src/main/resources/application.properties
+++ b/Web/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://chat-solution.cgxoomvl3w7d.ap-northeast-2.rds.amazonaws.com:3306/chat_solution
+spring.datasource.url=jdbc:mysql://chat-solution.caf0msubebpq.ap-northeast-2.rds.amazonaws.com:3306/chatsolution
 spring.datasource.username=admin
 spring.datasource.password=alphacity
 spring.jpa.hibernate.ddl-auto=update
