fcm truly complete

--- a/ChattingApp/app/src/main/AndroidManifest.xml
+++ b/ChattingApp/app/src/main/AndroidManifest.xml
@@ -21,15 +21,15 @@
         android:usesCleartextTraffic="true"
         >
 
-<!--        <activity-->
-<!--            android:name=".ui.auth.SignInActivity"-->
-<!--            android:exported="true">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+        <activity
+            android:name=".ui.auth.SignInActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
 
 <!--        <activity-->
