--- a/ChattingApp/app/src/main/AndroidManifest.xml
+++ b/ChattingApp/app/src/main/AndroidManifest.xml
@@ -18,19 +18,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar"
-        android:usesCleartextTraffic="true"
-        >
+        android:usesCleartextTraffic="true">
 
-
-        <!--        <activity-->
-        <!--            android:name=".ui.auth.SignInActivity"-->
-        <!--            android:exported="true">-->
-        <!--            <intent-filter>-->
-        <!--                <action android:name="android.intent.action.MAIN" />-->
-
-        <!--                <category android:name="android.intent.category.LAUNCHER" />-->
-        <!--            </intent-filter>-->
-        <!--        </activity>-->
         <service android:name=".MyFirebaseMessagingService"
             android:enabled="true"
             android:exported="true">
@@ -39,10 +28,7 @@
             </intent-filter>
         </service>
 
-
-        <activity
-            android:name=".ui.auth.SignInActivity"
-            android:exported="true">
+        <activity android:name=".SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -50,16 +36,11 @@
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".ui.auth.SignInActivity"
+            android:exported="true">
+        </activity>
 
-<!--        <activity-->
-<!--            android:name=".ui.auth.SignInActivity"-->
-<!--            android:exported="true">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
         <activity android:name=".ui.auth.SignUpActivity" />
         <activity android:name=".ui.auth.FindPasswordActivity" />
         <activity android:name=".ui.auth.FindPasswordVerifyActivity" />
